backend added swagger part and new models
